<resources>
    <string name="app_name">CityBuddy</string>
    <string name="homePage">Homepage</string>
    <string name="profilePage">Profile</string>
    <string name="journeysPage">Journeys</string>

    <string name="find">Find a buddy wherever you travel!</string>
    <string name="join">Join us now!</string>
    <string name="register">Register</string>
    <string name="title_activity_display_message">DisplayMessageActivity</string>
    <string name="title_activity_login">Sign in</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up now!</string>
    <string name="forgot">Forgot your password?</string>
    <string name="sign_in">Sign in right here</string>
    <string name="log_in">Log in now</string>
    <string name="reg">Complete registration</string>
    <string name="not_member">Not a member yet?</string>

    <string name="enter_information">Sign up now and enter your information below:</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="password_conform">Password conformation</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="gender">Gender</string>
    <string name="lang_1">Mother tongue</string>
    <string name="hobbies">Hobbies</string>
    <string name="interests">Interests</string>
    <string name="desc">Description</string>
    <string name="birthday">Birthday</string>
    <string name="image">Upload a profile picture</string>
    <string name="no">No Data</string>

    <string name="hello_homepage">Hello Buddy!</string>
    <string name="welcome_text_homepage">You are now singed in </string>
    <string name="sign_out_homepage">Want to sign out again?</string>
    <string name="search_text">Want to find a buddy?</string>

    <string name="here">Click here</string>
    <string name="all_buddies">Here are all the buddies</string>

    <string name="profile">Profile</string>
    <string name="your_profile">Want to look at your profile?</string>
    <string name="contact">Contact me!</string>
    <string name="edit">Edit your profile</string>
    <string name="searchbud">Search for a Buddy here</string>
    <string name="bycountry">by country</string>
    <string name="bylang">by language</string>
    <string name="search">Search now</string>
    <string name="search_hint">enter search</string>
    <string name="save">Save changes</string>
    <string name="upload">Upload</string>

    <string name="journey_information">Enter the details about your journey here!</string>
    <string name="dest_hint">Enter the country of your destination ...</string>
    <string name="journey">Create journey</string>
    <string name="arr">Arrival</string>
    <string name="dep">Departure</string>
    <string name="no_journeys">Sorry, there are no journeys.</string>
    <string name="new_journey">Click here to create a new journey</string>

    <string name="all_journeys">These are all journeys</string>
    <string name="no_res">Sorry, no results found for this search!</string>
    <string name="nothing">Sorry, but you did not enter anything or did not check a parameter you want to search by.</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
</resources>
