<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollview"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/register_signup_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/beigeColor"
            android:layout_margin="16dp"
            android:padding="16sp">

            <TextView
                android:id="@+id/mainscreen_heading"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/enter_information"
                android:textSize="22sp"
                android:textColor="@color/blackColor"
                android:layout_marginBottom="16sp"/>

            <TextView
                android:id="@+id/first_n"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:textColor="@color/blackColor"
                android:layout_below="@id/mainscreen_heading"/>

            <EditText
                android:id="@+id/first_n_Edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Max"
                android:textSize="12sp"
                android:layout_below="@id/first_n"
                android:inputType="textPersonName"/>

            <TextView
                android:id="@+id/last_n"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                android:textColor="@color/blackColor"
                android:layout_below="@id/first_n_Edit"/>

            <EditText
                android:id="@+id/last_n_Edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Mustermann"
                android:textSize="12sp"
                android:layout_below="@id/last_n"
                android:inputType="textPersonName"/>

            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/blackColor"
                android:layout_below="@id/last_n_Edit"/>

            <EditText
                android:id="@+id/email_Edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="something@email.com"
                android:textSize="12sp"
                android:layout_below="@id/email"
                android:inputType="textEmailAddress"/>

            <TextView
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/blackColor"
                android:layout_below="@id/email_Edit" />

            <EditText
                android:id="@+id/password_Edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="*****"
                android:textSize="12sp"
                android:layout_below="@id/password"
                android:inputType="textPassword"/>

            <TextView
                android:id="@+id/password_conf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password_conform"
                android:textColor="@color/blackColor"
                android:layout_below="@id/password_Edit" />

            <EditText
                android:id="@+id/password_conf_Edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="*****"
                android:textSize="12sp"
                android:layout_below="@id/password_conf"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/country"
                android:textColor="@color/blackColor"
                android:layout_below="@id/password_conf_Edit" />

            <AutoCompleteTextView
                android:id="@+id/city_autocomplete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter your home country ..."
                android:textSize="12sp"
                android:layout_below="@id/city"/>

            <TextView
                android:id="@+id/language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lang_1"
                android:textColor="@color/blackColor"
                android:layout_below="@id/city_autocomplete" />

            <AutoCompleteTextView
                android:id="@+id/language_autocomplete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter your mothertongue ..."
                android:textSize="12sp"
                android:layout_below="@id/language"/>

            <TextView
                android:id="@+id/birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/birthday"
                android:textColor="@color/blackColor"
                android:layout_below="@id/language_autocomplete" />

            <DatePicker
                android:id="@+id/calender"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_below="@id/birthday"
                android:datePickerMode="spinner"
                android:calendarViewShown="false" />

            <TextView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/image"
                android:textColor="@color/blackColor"
                android:layout_below="@id/calender" />

            <ImageView
                android:id="@+id/image_upload"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_below="@+id/image"
                android:layout_centerHorizontal="true"
                android:background="@drawable/nothing_uploaded"
                android:onClick="uploadProfileImage"/>

            <Button
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:onClick="submitLogin"
                android:text="@string/log_in"
                android:textColor="@color/whiteColor"
                android:background="@color/darkBlueColor"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:layout_below="@id/image_upload"
                android:textAllCaps="false"/>

        </RelativeLayout>
        
        <Button
            android:id="@+id/upload_me"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:text="test me pic"
            android:onClick="testMe"/>

        <ImageView
            android:id="@+id/image_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>