<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollview"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="ContentDescription"
            android:orientation="vertical"
            android:layout_margin="16dp"
            android:id="@+id/relLayout"
            android:layout_marginBottom="20dp">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/logo_small" />

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/app_name"
                android:textSize="20sp"
                android:textColor="@color/darkBlueColor"
                android:layout_below="@id/logo"
                android:textAlignment="center"
                android:layout_marginBottom="16sp"/>

            <RelativeLayout
                android:id="@+id/register_signup_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/beigeColor"
                android:layout_below="@id/title"
                android:layout_margin="16dp"
                android:padding="16sp">

                <TextView
                    android:id="@+id/mainscreen_heading"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/log_in"
                    android:textSize="22sp"
                    android:textColor="@color/blackColor"
                    android:layout_marginBottom="16sp"/>


                <TextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textColor="@color/blackColor"
                    android:layout_below="@id/mainscreen_heading"/>

                <EditText
                    android:id="@+id/emailEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="something@email.com"
                    android:textSize="12sp"
                    android:layout_below="@id/email"
                    android:inputType="textEmailAddress"/>

                <TextView
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textColor="@color/blackColor"
                    android:layout_below="@id/emailEdit" />

                <EditText
                    android:id="@+id/passwordEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="*****"
                    android:textSize="12sp"
                    android:layout_below="@id/password"
                    android:inputType="textPassword"/>

                <Button
                    android:id="@+id/button_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:onClick="logIn"
                    android:text="@string/log_in"
                    android:textColor="@color/whiteColor"
                    android:background="@color/darkBlueColor"
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    android:layout_below="@id/passwordEdit"
                    android:textAllCaps="false"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/member_sign_up"
                    android:layout_below="@id/button_login"
                    android:layout_marginTop="32sp">

                    <TextView
                        android:id="@+id/member"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/not_member"
                        android:textColor="@color/blackColor"
                        android:layout_gravity="center"/>

                    <Button
                        android:id="@+id/sign_up_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_up"
                        android:textAllCaps="false"
                        android:textColor="@color/blackColor"
                        android:onClick="importantFunc"
                        android:background="@drawable/border" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/forgot_password"
                    android:layout_below="@id/member_sign_up"
                    android:layout_marginTop="16sp">

                    <TextView
                        android:id="@+id/forgot_password_link"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/forgot"
                        android:textColor="@color/blackColor" />

                    <Button
                        android:id="@+id/sign_up_link"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/here"
                        android:textAllCaps="false"
                        android:textColor="@color/blackColor"
                        android:background="@drawable/border"
                        android:onClick="importantFunc" />
                </LinearLayout>


            </RelativeLayout>

        </RelativeLayout>

        <Button
            android:id="@+id/am_i_logged_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Auth, am i logged in?"
            android:onClick="checkDoc"/>

    </LinearLayout>
</ScrollView>