<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollview"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="ContentDescription"
            android:orientation="vertical"
            android:layout_margin="16dp"
            android:id="@+id/relLayout"
            android:layout_marginBottom="20dp"
            android:background="@color/beigeColor"
            android:padding="16sp">

            <TextView
                android:id="@+id/profile_heading"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/profile"
                android:textSize="22sp"
                android:textColor="@color/blackColor"
                android:textStyle="bold"/>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/pic_and_name"
                android:layout_below="@id/profile_heading">

                <ImageView
                    android:id="@+id/profile_pic"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/avatar"
                    android:layout_below="@id/profile_heading" />

                <EditText
                    android:id="@+id/profile_name"
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="16sp"
                    android:paddingTop="40sp"
                    android:layout_height="match_parent"
                    android:hint="@string/no"
                    android:textColor="@color/blackColor"
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/city_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/pic_and_name"
                android:text="@string/city"
                android:textSize="16sp"
                android:textColor="@color/blackColor"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:layout_below="@id/city_heading"
                android:textColor="@color/blackColor"
                android:layout_marginLeft="16sp"
                android:layout_marginTop="8sp"
                android:layout_marginBottom="16sp"/>

            <TextView
                android:id="@+id/country_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/city"
                android:text="@string/country"
                android:textSize="16sp"
                android:textColor="@color/blackColor"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:layout_below="@id/country_heading"
                android:textColor="@color/blackColor"
                android:layout_marginLeft="16sp"
                android:layout_marginTop="8sp"
                android:layout_marginBottom="16sp"/>

            <TextView
                android:id="@+id/birthday_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/country"
                android:text="@string/birthday"
                android:textSize="16sp"
                android:textColor="@color/blackColor"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:layout_below="@id/birthday_heading"
                android:textColor="@color/blackColor"
                android:layout_marginLeft="16sp"
                android:layout_marginTop="8sp"
                android:layout_marginBottom="16sp"/>

            <TextView
                android:id="@+id/mothertongue_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/birthday"
                android:text="@string/lang_1"
                android:textSize="16sp"
                android:textColor="@color/blackColor"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/mothertongue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:layout_below="@id/mothertongue_heading"
                android:textColor="@color/blackColor"
                android:layout_marginLeft="16sp"
                android:layout_marginTop="8sp"
                android:layout_marginBottom="16sp"/>

            <Button
                android:id="@+id/save_edit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:onClick="saveEdit"
                android:text="@string/save"
                android:textColor="@color/whiteColor"
                android:background="@color/darkBlueColor"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:layout_below="@id/mothertongue"
                android:textAllCaps="false" />

        </RelativeLayout>


    </LinearLayout>
</ScrollView>