<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollview"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="ContentDescription"
            android:orientation="vertical"
            android:layout_margin="16dp"
            android:id="@+id/relLayout"
            android:layout_marginBottom="20dp">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/logo_small" />

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/app_name"
                android:textSize="20sp"
                android:textColor="@color/darkBlueColor"
                android:layout_below="@id/logo"
                android:textAlignment="center"
                android:layout_marginBottom="16sp" />


            <RelativeLayout
                android:id="@+id/register_signup_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/beigeColor"
                android:layout_below="@id/title"
                android:layout_margin="16dp"
                android:padding="16sp">

                <TextView
                    android:id="@+id/mainscreen_heading"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/find"
                    android:textSize="22sp"
                    android:textAlignment="center"
                    android:textColor="@color/blackColor"/>

                <TextView
                    android:id="@+id/join"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/join"
                    android:layout_below="@id/mainscreen_heading"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:paddingTop="8sp"
                    android:textColor="@color/blackColor"/>

                <Button
                    android:id="@+id/button_signin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:onClick="signIn"
                    android:text="@string/log_in"
                    android:background="@color/darkBlueColor"
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    android:layout_below="@id/join"
                    android:textColor="@color/whiteColor"
                    android:textAllCaps="false"/>

                <Button
                    android:id="@+id/button_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:onClick="register"
                    android:text="@string/register"
                    android:background="@drawable/border"
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    android:layout_below="@id/button_signin"
                    android:textAllCaps="false"/>
            </RelativeLayout>
        </RelativeLayout>

        <Button
            android:id="@+id/md5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="MD5 hash hopefully"
            android:onClick="test"/>
    </LinearLayout>
</ScrollView>